[BUGFIX] Update the extension naming method (composer manifest)
Move the method of renaming the package
('typo3-site-operator' to 'site_operator') from
composer's 'replace' section to the 'extra' configuration,
which will be handled by the TYPO3 composer installers.
This will prevent validation errors of the composer
manifest on external platforms (i.e. packagist).

--- a/composer.json
+++ b/composer.json
@@ -4,9 +4,6 @@
 
   "license": ["GPL-2.0+"],
   "type": "typo3-cms-extension",
-  "replace": {
-    "site_operator": "*"
-  },
   "authors": [
     {
       "name": "Manuel Glauser",
@@ -26,6 +23,11 @@
   "autoload-dev": {
     "psr-4": {
       "Glowpointzero\\SiteOperator\\Tests\\": "Tests/"
+    }
+  },
+  "extra": {
+    "typo3/cms": {
+      "extension-key": "site_operator"
     }
   }
 }
