[TASK] Update examples and readme

--- a/Configuration/default-config.json
+++ b/Configuration/default-config.json
@@ -2,5 +2,6 @@
   "includes": [],
   "constants": {},
   "scheduledTasksSourcePaths": [],
-  "generatedResources": {}
+  "generatedResources": {},
+  "siteCheckup": {}
 }
