--- a/Documentation/Examples/Configuration/config.generatedResources.json
+++ b/Documentation/Examples/Configuration/config.generatedResources.json
@@ -1,22 +1,15 @@
 {
-  "constants": {
-    "colorPalette": {
-      "primaryColor": {
-        "hex": "#500000"
-      },
-      "darkerPrimaryColor": {
-        "hex": "#380000"
-      }
-    }
-  },
-  "scheduledTasksSourcePaths": [
-    "config/ScheduledTasks.php"
-  ],
   "generatedResources": {
     "web/typo3conf/ext/my_site_package/Configuration/TypoScript/_generated/constants.typoscript": {
       "generator": "text",
       "configuration": {
         "source": "web/typo3conf/ext/my_site_package/Configuration/TypoScript/_generated/constants.typoscript.dist"
+      }
+    },
+    "web/typo3conf/ext/my_site_package/Configuration/TypoScript/_generated/_settings.scss": {
+      "generator": "text",
+      "configuration": {
+        "source": "web/typo3conf/ext/my_site_package/Configuration/TypoScript/_generated/_settings.scss.dist"
       }
     },
     "web/typo3conf/ext/my_site_package/Resources/Public/Images/_generated/favicon-site-a.ico": {
